--- a/fdevsec.yaml
+++ b/fdevsec.yaml
@@ -1,21 +1,5 @@
 version: v1
 
 id:
-  org: XXX-XXX-XXX-XX
-  app: XXX-XXX-XXX-XX
-  
-scanners:
-  - sast
-  #- dast
-  - secret
-  - sca
-  - iac
-  - container   
-    
-dast:
-#  url: http://xxx.xxx.xx/
-#  fortipentest_scanner: false #true|false
-  full_scan: true #true|false
-
-fail_pipeline:
-  risk_rating: 8
+  org: 400a4f18-ceb2-4d89-ba1f-5ce36001ac6b
+  app: 8ccdae11-9a50-45e5-ab65-532a0e60277d
